[gd_scene load_steps=4 format=3 uid="uid://c1toudfwavpr0"]

[ext_resource type="Script" path="res://Scenes/Level/Usables/training_dummy.gd" id="1_vl4mo"]
[ext_resource type="Texture2D" uid="uid://bvc8soxkx53l7" path="res://Sprites/terrain/usable.png" id="2_e20nl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fugfa"]
size = Vector2(26, 12)

[node name="TrainingDummy" type="Node2D"]
light_mask = 2
visibility_layer = 2
script = ExtResource("1_vl4mo")
node_name = "training_dummy"

[node name="Sprite2D" type="Sprite2D" parent="."]
visibility_layer = 2
texture = ExtResource("2_e20nl")
region_enabled = true
region_rect = Rect2(64, 32, 32, 16)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_fugfa")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Hero_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
